Update landing page content - align with syllabus messaging

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>מאישיות לתוכן | חמ"ש - חיבורים מייצרים שינוי</title>
-  <meta name="description" content="מסלול שמלמד מטפלים אלטרנטיביים להפוך את הערך היחודי שלהם לתוכן אותנטי ומשפיע. 7 מפגשים חיים בזום.">
+  <meta name="description" content="תהליך סדנאתי בן 7 מפגשים לבניית זהות מקצועית ברורה ויצירת תוכן אותנטי בליווי עוזר AI מותאם אישית. קבוצות קטנות בזום.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700;900&display=swap" rel="stylesheet">
@@ -828,10 +828,10 @@
   <!-- ===== Hero ===== -->
   <section class="hero" id="top">
     <div class="hero-content">
-      <div class="hero-badge">חמ"ש | מסלול מאישיות לתוכן</div>
-      <h1>את יודעת בדיוק מה לעשות בחדר.<br><span>את פשוט לא יודעת איך לדבר על זה בחוץ.</span></h1>
+      <div class="hero-badge">חמ"ש | תהליך מאישיות לתוכן</div>
+      <h1>את יודעת שאת צריכה ליצור תוכן.<br><span>את פשוט לא יודעת על מה לכתוב ואיך.</span></h1>
       <p class="hero-subtitle">
-        מסלול שמלמד אנשי מקצוע בתחום הטיפול להפוך את הערך היחודי שלהם לתוכן אותנטי ומשפיע
+        תהליך סדנאתי בן 7 מפגשים לבניית זהות מקצועית ברורה ויצירת תוכן אותנטי - בליווי עוזר AI מותאם אישית
       </p>
       <a href="#register" class="hero-cta">
         אני רוצה ללמוד איך
@@ -840,9 +840,9 @@
       <div class="hero-meta">
         <span>7 מפגשים חיים בזום</span>
         <span>·</span>
-        <span>21 שעות</span>
+        <span>קבוצות קטנות</span>
         <span>·</span>
-        <span>₪2,500</span>
+        <span>כולל עוזר AI אישי</span>
       </div>
     </div>
     <a href="#problem" class="scroll-hint" aria-label="גלול למטה">&#8595;</a>
@@ -853,24 +853,24 @@
     <div class="container">
       <div class="section-title reveal">
         <h2>נשמע מוכר?</h2>
-        <p>הרבה אנשי מקצוע מוכשרים מרגישים בדיוק ככה</p>
+        <p>את יודעת שהתהליך שלך עובד. את רואה את זה בעיניים של הלקוחות שלך.</p>
       </div>
       <div class="problems-grid">
         <div class="problem-card reveal" style="transition-delay:0.1s">
           <div class="problem-icon">💭</div>
-          <p>יש לך ידע מקצועי עמוק, אבל כשמגיע הרגע לכתוב פוסט - הכל נשמע גנרי ולא כמוך</p>
+          <p>מישהו שואל "מה את עושה?" ומשהו נתקע. לא בגלל שאת לא יודעת - אלא בגלל שמה שיוצא לא נשמע כמוך</p>
         </div>
         <div class="problem-card reveal" style="transition-delay:0.2s">
-          <div class="problem-icon">👀</div>
-          <p>את רואה קולגות פחות מנוסות שמצליחות ברשתות ותוהה מה חסר לך</p>
+          <div class="problem-icon">📝</div>
+          <p>כשצריך לכתוב פוסט - הדף ריק. ומה שיוצא נשמע מכירתי ומאולץ, לא כמוך</p>
         </div>
         <div class="problem-card reveal" style="transition-delay:0.3s">
-          <div class="problem-icon">🎓</div>
-          <p>ניסית כבר כמה קורסי שיווק, אבל הם לא דיברו בשפה שלך ולא הרגישו אותנטיים</p>
+          <div class="problem-icon">🔄</div>
+          <p>את צריכה לדחוף את עצמך ליצור תוכן במקום להרגיש שאת פשוט מציעה עזרה</p>
         </div>
         <div class="problem-card reveal" style="transition-delay:0.4s">
-          <div class="problem-icon">🔒</div>
-          <p>שיווק מרגיש לא אותנטי - וזה בדיוק מה שמעכב אותך מלהגיע לאנשים שצריכים אותך</p>
+          <div class="problem-icon">⏸️</div>
+          <p>ועוד שבוע עובר בלי שהעולם שומע ממך - למרות שמה שאת נותנת שווה הרבה יותר ממה שאת מצליחה להסביר</p>
         </div>
       </div>
     </div>
@@ -880,18 +880,18 @@
   <section class="section section--dark" id="transform">
     <div class="container">
       <div class="section-title reveal">
-        <h2>מה ישתנה?</h2>
-        <p>הבעיה היא לא חוסר ידע בשיווק. הבעיה היא חוסר בהירות לגבי הזהות המקצועית שלך.</p>
+        <h2>לא קורס שיווק. תהליך של בהירות.</h2>
+        <p>הבידול שלך כבר קיים - הוא בדרך שלך, בגישה שלך, בחוויה שאת יוצרת. צריך רק לדעת לשדר אותו החוצה.</p>
       </div>
       <div class="transform-grid reveal">
         <div class="transform-box transform-before">
           <h3>לפני</h3>
-          <p>יושבת מול מסך ריק, לא יודעת מה לכתוב, מרגישה שהמילים לא מייצגות את מי שאת באמת</p>
+          <p>תוכן שמרגיש מאולץ ומכירתי. את דוחפת את עצמך לכתוב במקום שזה יזרום טבעי</p>
         </div>
         <div class="transform-arrow">→</div>
         <div class="transform-box transform-after">
           <h3>אחרי</h3>
-          <p>יוצרת תוכן בביטחון, מושכת לקוחות שמתאימים לך, ומרגישה שכל מילה נשמעת כמוך</p>
+          <p>תוכן שמרגיש כמו מערכת יחסים עם הקהל - לא כמו מכירה. שיטת עבודה ברורה שנשארת איתך</p>
         </div>
       </div>
     </div>
@@ -902,25 +902,25 @@
     <div class="container">
       <div class="section-title reveal">
         <h2>איך זה עובד?</h2>
-        <p>3 שלבים מהזהות המקצועית שלך לתוכן שמדבר בקול שלך</p>
+        <p>ממיקוד הזהות המקצועית שלך לתוכן שמרגיש טבעי</p>
       </div>
       <div class="steps-grid">
         <div class="step-card reveal" style="transition-delay:0.1s">
           <div class="step-num">1</div>
-          <h3>מגלים</h3>
-          <p>מי את מקצועית, מה הערכים שמנחים אותך, ומה הייחודיות שלך</p>
+          <h3>מגדירים</h3>
+          <p>בונים זהות מקצועית ברורה - יסודות, ערכים, אישיות וקהל יעד</p>
           <span class="step-sessions">מפגשים 1-4</span>
         </div>
         <div class="step-card reveal" style="transition-delay:0.2s">
           <div class="step-num">2</div>
-          <h3>מספרים</h3>
-          <p>בונים את הסיפור המקצועי שלך ויוצרים ספר מותג אישי</p>
+          <h3>מחברים</h3>
+          <p>מחברים את הכל לספר מותג אישי - מסמך אחד שכל תוכן עתידי נגזר ממנו</p>
           <span class="step-sessions">מפגש 5</span>
         </div>
         <div class="step-card reveal" style="transition-delay:0.3s">
           <div class="step-num">3</div>
           <h3>יוצרים</h3>
-          <p>מתרגמים את הזהות לתוכן אותנטי עם כלי AI שעובדים בשבילך</p>
+          <p>בונים אסטרטגיית תוכן ויוצרים תוכן אמיתי בעזרת סוכן AI אישי שמכיר אותך</p>
           <span class="step-sessions">מפגשים 6-7</span>
         </div>
       </div>
@@ -931,28 +931,28 @@
   <section class="section section--dark" id="deliverables">
     <div class="container">
       <div class="section-title reveal">
-        <h2>מה תקבלי בסוף המסלול?</h2>
+        <h2>עם מה יוצאים מהתהליך?</h2>
       </div>
       <div class="deliverables-grid reveal">
         <div class="deliverable-item">
+          <span class="deliverable-icon">💎</span>
+          <p>בהירות מלאה לגבי מה מייחד אותך מקצועית</p>
+        </div>
+        <div class="deliverable-item">
           <span class="deliverable-icon">📖</span>
-          <p>ספר מותג אישי</p>
+          <p>ספר מותג אישי - מסמך אחד שכל תוכן עתידי נגזר ממנו</p>
         </div>
         <div class="deliverable-item">
           <span class="deliverable-icon">📋</span>
-          <p>תוכנית תוכן מעשית</p>
+          <p>תוכנית תוכן מעשית מותאמת לזמן ולמשאבים שלך</p>
         </div>
         <div class="deliverable-item">
           <span class="deliverable-icon">✍️</span>
-          <p>תכנים מוכנים לפרסום</p>
+          <p>תוכן מוכן לפרסום שנוצר כבר במהלך התהליך</p>
         </div>
         <div class="deliverable-item">
           <span class="deliverable-icon">🤖</span>
-          <p>שיטת עבודה עם AI</p>
-        </div>
-        <div class="deliverable-item">
-          <span class="deliverable-icon">💎</span>
-          <p>בהירות מקצועית</p>
+          <p>סוכן AI אישי שממשיך ללוות אותך גם אחרי הקורס</p>
         </div>
       </div>
     </div>
@@ -962,37 +962,37 @@
   <section class="section section--lavender" id="modules">
     <div class="container">
       <div class="section-title reveal">
-        <h2>7 מפגשים, מסע שלם</h2>
-        <p>כל מפגש 3 שעות, חי בזום, עם תרגול מעשי</p>
+        <h2>7 סדנאות, תוצר מוחשי בכל מפגש</h2>
+        <p>כל סדנא בנויה סביב מודל עבודה ייחודי שנבנה במיוחד לתהליך הזה</p>
       </div>
       <div class="modules-list">
         <div class="module-item reveal" style="transition-delay:0.05s">
           <div class="module-num">1</div>
-          <div class="module-info"><h3>יסודות מקצועיים</h3><p>מי את, למה את עושה מה שאת עושה, ומה הערך שלך</p></div>
+          <div class="module-info"><h3>הנחת היסודות המקצועיים</h3><p>תוצר: הצגה עצמית ברורה שמתאימה לפרופילים המקצועיים שלך</p></div>
         </div>
         <div class="module-item reveal" style="transition-delay:0.1s">
           <div class="module-num">2</div>
-          <div class="module-info"><h3>מעגלי ערכים</h3><p>הערכים שמנחים אותך ואיך הם הופכים לקול מקצועי</p></div>
+          <div class="module-info"><h3>מעגלי הערכים</h3><p>תוצר: מפת ערכים אישית שמבדלת אותך בתהליך שאת מעבירה</p></div>
         </div>
         <div class="module-item reveal" style="transition-delay:0.15s">
           <div class="module-num">3</div>
-          <div class="module-info"><h3>אישיות מקצועית</h3><p>הקול הייחודי שלך וסגנון התקשורת שמתאים לך</p></div>
+          <div class="module-info"><h3>האישיות המקצועית</h3><p>תוצר: פרופיל אישיות מקצועית - איך את נשמעת, נראית ומורגשת</p></div>
         </div>
         <div class="module-item reveal" style="transition-delay:0.2s">
           <div class="module-num">4</div>
-          <div class="module-info"><h3>קהל יעד</h3><p>למי את מדברת, ואיך לדבר אליהם בשפה שמהדהדת</p></div>
+          <div class="module-info"><h3>אפיון קהל היעד</h3><p>תוצר: תמונת קהל יעד מפורטת - מה מניע אותם ומה גורם להם לפעול</p></div>
         </div>
         <div class="module-item reveal" style="transition-delay:0.25s">
           <div class="module-num">5</div>
-          <div class="module-info"><h3>סיפור הסיפור</h3><p>בניית הנרטיב המקצועי וספר מותג אישי</p></div>
+          <div class="module-info"><h3>ספר מותג אישי</h3><p>תוצר: ספר מותג אישי - מסמך אחד שלם, הבסיס לכל תוכן עתידי</p></div>
         </div>
         <div class="module-item reveal" style="transition-delay:0.3s">
           <div class="module-num">6</div>
-          <div class="module-info"><h3>אסטרטגיית תוכן</h3><p>מה לכתוב, איפה לפרסם, ואיך לתכנן</p></div>
+          <div class="module-info"><h3>אסטרטגיית תוכן</h3><p>תוצר: תוכנית עבודה מעשית - מה לפרסם, איפה, ובאיזה קצב</p></div>
         </div>
         <div class="module-item reveal" style="transition-delay:0.35s">
           <div class="module-num">7</div>
-          <div class="module-info"><h3>יצירת תוכן עם AI</h3><p>כלים חכמים שעובדים בשבילך ושומרים על הקול שלך</p></div>
+          <div class="module-info"><h3>סדנת יצירה בליווי עוזר AI</h3><p>תוצר: תוכן מוכן לפרסום + שגרת עבודה עם סוכן AI אישי</p></div>
         </div>
       </div>
     </div>
@@ -1002,24 +1002,24 @@
   <section class="section" id="fit">
     <div class="container">
       <div class="section-title reveal">
-        <h2>בשבילך?</h2>
+        <h2>למי זה מתאים?</h2>
       </div>
       <div class="fit-grid reveal">
         <div class="fit-box fit-yes">
-          <h3>✦ זה בשבילך אם:</h3>
+          <h3>✦ התהליך הזה בשביל מי ש:</h3>
           <ul>
-            <li><span class="icon">✓</span> את מטפלת, מנחה, יועצת או מלווה עם ניסיון מקצועי</li>
-            <li><span class="icon">✓</span> את רוצה ליצור תוכן שמרגיש כמוך ולא כמו כולם</li>
-            <li><span class="icon">✓</span> את מוכנה להשקיע זמן בתהליך אמיתי ולא בטריקים</li>
-            <li><span class="icon">✓</span> את פתוחה לעבודה עם כלים דיגיטליים וAI</li>
+            <li><span class="icon">✓</span> יודעת שהתהליך שלה עובד - אבל מתקשה להעביר את זה בתוכן</li>
+            <li><span class="icon">✓</span> רוצה ליצור נוכחות דיגיטלית אבל לא יודעת מאיפה להתחיל</li>
+            <li><span class="icon">✓</span> מחפשת דרך שיטתית ליצור תוכן שמרגיש טבעי ונותן ערך</li>
+            <li><span class="icon">✓</span> מוכנה לתהליך של בהירות מחשבתית - לא טריקים מהירים</li>
           </ul>
         </div>
         <div class="fit-box fit-no">
-          <h3>✦ זה לא בשבילך אם:</h3>
+          <h3>✦ כמה דברים שכדאי לדעת:</h3>
           <ul>
-            <li><span class="icon">✗</span> את מחפשת פתרון מהיר שיביא לקוחות מחר</li>
-            <li><span class="icon">✗</span> את לא מוכנה לעבודה פנימית על הזהות המקצועית</li>
-            <li><span class="icon">✗</span> את מעדיפה נוסחאות מוכנות על פני תהליך אישי</li>
+            <li><span class="icon">•</span> בין המפגשים יש משימות קצרות לתרגול</li>
+            <li><span class="icon">•</span> כל משתתפת מקבלת גישה לסוכן AI אישי לליווי בין המפגשים</li>
+            <li><span class="icon">•</span> הסוכן ממשיך ללוות אותך גם אחרי סיום הקורס</li>
           </ul>
         </div>
       </div>
@@ -1034,7 +1034,7 @@
         <h2>שריאל טפר</h2>
         <h3 style="color:var(--color-purple-mid); font-weight:400; margin-top:4px">מנחה המסלול</h3>
         <blockquote>
-          אני מאמין שלכל איש מקצוע יש סיפור ייחודי. הבעיה היא שאף אחד לא לימד אותנו איך לספר אותו. המסלול הזה נולד כי ראיתי מטפלים מדהימים שנשארו בצל - לא כי חסר להם ערך, אלא כי חסרה להם השפה לתקשר אותו.
+          ראיתי אנשי מקצוע מדהימים שיודעים בדיוק מה הם עושים בחדר - אבל מתקשים לדבר על זה בחוץ. הבידול שלהם כבר קיים, רק חסרה השפה. התהליך הזה נולד כדי לסגור את הפער הזה - בשיטה, לא בניחושים.
         </blockquote>
       </div>
     </div>
@@ -1046,7 +1046,7 @@
       <div class="form-wrapper">
         <div class="form-card">
           <div id="form-content">
-            <h2>מוכנה להפוך את הייחודיות שלך לתוכן?</h2>
+            <h2>ממיקוד האישיות המקצועית שלך לתוכן שמרגיש כמוך</h2>
             <p class="form-subtitle">השאירי פרטים ונחזור אליך לשיחת התאמה קצרה</p>
 
             <form id="registration-form" aria-label="טופס הרשמה לקורס" novalidate>
@@ -1076,11 +1076,11 @@
             <div class="form-error" id="form-error" role="alert"></div>
 
             <div class="form-meta">
-              <span>₪2,500</span>
+              <span>7 מפגשים חיים בזום</span>
               <span>·</span>
-              <span>7 מפגשים חיים</span>
+              <span>קבוצות קטנות</span>
               <span>·</span>
-              <span>21 שעות</span>
+              <span>כולל עוזר AI אישי</span>
             </div>
           </div>
 
@@ -1106,17 +1106,24 @@
       <div class="faq-list">
         <div class="faq-item reveal">
           <button class="faq-question" aria-expanded="false">
-            צריך ניסיון בשיווק או ביצירת תוכן?
+            זה קורס שיווק?
             <span class="arrow">▼</span>
           </button>
-          <div class="faq-answer"><div class="faq-answer-inner">בכלל לא. המסלול מתחיל מאפס ובנוי במיוחד לאנשי מקצוע שלא באים מעולם השיווק. אנחנו מתחילים מהזהות המקצועית שלך - ומשם הכל זורם טבעי.</div></div>
+          <div class="faq-answer"><div class="faq-answer-inner">לא. זה תהליך של בהירות מחשבתית ויצירת תוכן שמרגיש טבעי. אנחנו לא מלמדים טריקים שיווקיים - אלא עוזרים לך לגלות מה מייחד אותך ואיך לתקשר את זה.</div></div>
+        </div>
+        <div class="faq-item reveal">
+          <button class="faq-question" aria-expanded="false">
+            מה זה סוכן AI אישי?
+            <span class="arrow">▼</span>
+          </button>
+          <div class="faq-answer"><div class="faq-answer-inner">כלי AI שמותאם אישית לספר המותג שלך. הוא מכיר את הערכים, הקול והקהל שלך - ועוזר לך ליצור תוכן שנשמע כמוך. הוא ממשיך ללוות אותך גם אחרי סיום הקורס.</div></div>
         </div>
         <div class="faq-item reveal">
           <button class="faq-question" aria-expanded="false">
             מה אם אני לא טכנולוגית?
             <span class="arrow">▼</span>
           </button>
-          <div class="faq-answer"><div class="faq-answer-inner">הכלים שנלמד פשוטים לשימוש. נעבור עליהם צעד אחרי צעד, ותקבלי ליווי צמוד. הרבה מהמשתתפות שלנו התחילו בדיוק מהמקום הזה.</div></div>
+          <div class="faq-answer"><div class="faq-answer-inner">הכלים שנלמד פשוטים לשימוש. נעבור עליהם צעד אחרי צעד, ותקבלי ליווי צמוד. המודלים שעובדים איתם בנויים להיות פשוטים ומובנים.</div></div>
         </div>
         <div class="faq-item reveal">
           <button class="faq-question" aria-expanded="false">
@@ -1127,24 +1134,17 @@
         </div>
         <div class="faq-item reveal">
           <button class="faq-question" aria-expanded="false">
-            אפשר בתשלומים?
+            למי התהליך מתאים?
             <span class="arrow">▼</span>
           </button>
-          <div class="faq-answer"><div class="faq-answer-inner">כן, אפשר לפרוס עד 3 תשלומים. נדבר על זה בשיחת ההתאמה.</div></div>
+          <div class="faq-answer"><div class="faq-answer-inner">לאנשי מקצוע שיודעים שהתהליך שלהם עובד, אבל מתקשים להעביר את זה בתוכן. שרוצים ליצור נוכחות דיגיטלית שמרגישה כמוהם ונותנת ערך - לא רק "עושים שיווק".</div></div>
         </div>
         <div class="faq-item reveal">
           <button class="faq-question" aria-expanded="false">
-            למי המסלול מתאים?
+            מה קורה אחרי הקורס?
             <span class="arrow">▼</span>
           </button>
-          <div class="faq-answer"><div class="faq-answer-inner">המסלול מותאם למטפלים, מנחים, יועצים, מלווים ואנשי מקצוע בתחום הטיפול והליווי שרוצים ליצור תוכן שמייצג אותם באמת - ולא רק "לעשות שיווק".</div></div>
-        </div>
-        <div class="faq-item reveal">
-          <button class="faq-question" aria-expanded="false">
-            מה אם אני מגלה שזה לא מתאים לי?
-            <span class="arrow">▼</span>
-          </button>
-          <div class="faq-answer"><div class="faq-answer-inner">בדיוק בשביל זה יש שיחת התאמה לפני ההרשמה. המטרה היא לוודא שהמסלול מתאים בדיוק בשבילך. אם לא - נגיד את זה בכנות.</div></div>
+          <div class="faq-answer"><div class="faq-answer-inner">את יוצאת עם ספר מותג, תוכנית תוכן, תכנים מוכנים לפרסום, וסוכן AI אישי שממשיך ללוות אותך. כל מה שצריך כדי להמשיך ליצור תוכן באופן עצמאי.</div></div>
         </div>
       </div>
     </div>
@@ -1153,8 +1153,8 @@
   <!-- ===== Final CTA ===== -->
   <section class="final-cta" id="final-cta">
     <div class="container reveal">
-      <h2>הסיפור המקצועי שלך מחכה שיספרו אותו</h2>
-      <p>7 מפגשים שיהפכו את מי שאת לתוכן שאנשים רוצים לקרוא</p>
+      <h2>מה שמייחד אותך כבר קיים. צריך רק לדעת לשדר אותו.</h2>
+      <p>7 סדנאות שייקחו אותך מבהירות מקצועית לתוכן שמרגיש כמוך</p>
       <a href="#register" class="final-cta-btn">אני מוכנה להתחיל</a>
     </div>
   </section>
