--- a/contact/index.html
+++ b/contact/index.html
@@ -58,6 +58,18 @@
             overflow-x: hidden;
         }
 
+        /* ========== CUSTOM SCROLLBAR ========== */
+        ::-webkit-scrollbar { width: 8px; }
+        ::-webkit-scrollbar-track { background: var(--color-darker); }
+        ::-webkit-scrollbar-thumb {
+            background: linear-gradient(180deg, var(--color-primary), var(--color-secondary));
+            border-radius: 4px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: linear-gradient(180deg, var(--color-secondary), var(--color-accent));
+        }
+        html { scrollbar-color: var(--color-secondary) var(--color-darker); scrollbar-width: thin; }
+
         /* ========== REDUCED MOTION ========== */
         @media (prefers-reduced-motion: reduce) {
             *, *::before, *::after {
